--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/ios/
+/macos/
+/windows/
+/linux/
+/android/
+/web/
 
 # Symbolication related
 app.*.symbols
